--- a/Kart Booking System/Kart Booking System.vbproj
+++ b/Kart Booking System/Kart Booking System.vbproj
@@ -167,10 +167,6 @@
     </None>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Content Include="Data\KartBooking.accdb">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
